--- a/app/views/cooperate_reservation/_form.html.erb
+++ b/app/views/cooperate_reservation/_form.html.erb
@@ -1,6 +1,4 @@
 
-<%= form_with url: "/reservations", method: :post do |form| %>
-
   <% if reservation.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(reservation.errors.count, "error") %> prohibited this reservation from being saved:</h2>
@@ -21,14 +19,18 @@
   </div>
   <div class="bs-stepper">
     <div class="bs-stepper-content">
+      <%= form_with url: "/reservations", method: :post do |form| %>
       <%= render :partial => "step1",  :locals=>{:form=>form} %>
-      <%#= render :partial => "step2",  :locals=>{:form=>form} %>
+      <%= render :partial => "step2",  :locals=>{:form=>form} %>
       <%#= render :partial => "step3",  :locals=>{:form=>form} %>
     </div>
 
     <br>
     <br>
-    <div class="d-flex actions justify-content-center">
+
+
+
+  <div class="d-flex actions justify-content-center">
       <p><%= form.submit "Continue", class:"btn btn-primary"  %></p>
       <span style="width:10px"></span>
       <p><%= form.submit "Back", :name => "back_button", class:"btn btn-secondary" unless @reservation.first_step? %></p>
