--- a/app/assets/stylesheets/cooperate_reservation.scss
+++ b/app/assets/stylesheets/cooperate_reservation.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the cooperate_reservation controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.card-header {
+  background-color: #07153a;
+  color: white;
+}
+.card {
+  margin-bottom: 20px;
+}
+.toggle-list {
+  float: right;
+  cursor: pointer;
+}
+.room{
+  width: 70px;
+  //border: 1px solid grey;
+  background-color: #CED4DA;
+
+}
+.room:hover{
+  background-color: #ffbd4a;
+}
