--- a/app/views/cooperate_reservation/_step2.html.erb
+++ b/app/views/cooperate_reservation/_step2.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-6 row">
       <div class="row end-row-md">
-        <p class="col-lg-3">Tên khách</p>
+        <p class="col-lg-3">Tên trưởng đoàn</p>
         <div class="col-lg-7 form-group">
           <%= client.text_field :name, class:"form-control", placeholder: "Nguyễn Văn A" %>
           <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
