--- a/app/views/room_diagram/_rooms.html.erb
+++ b/app/views/room_diagram/_rooms.html.erb
@@ -77,9 +77,9 @@
 
 
             <% end %>
-            <div class="reservation-list">
-              <div class="d-flex justify-content-center">Danh sách đặt phòng gần đây</div>
-            </div>
+<!--            <div class="reservation-list">-->
+<!--              <div class="d-flex justify-content-center">Danh sách đặt phòng gần đây</div>-->
+<!--            </div>-->
           </div>
         <% end %>
       <% end %>
