--- a/app/assets/stylesheets/cooperate_reservation.scss
+++ b/app/assets/stylesheets/cooperate_reservation.scss
@@ -2,9 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.card-header {
+#rooms_header.card-header {
   background-color: #07153a;
   color: white;
+}
+#result_header.card-header{
+  padding-top: 20px;
+  background-color: white;
 }
 .card {
   margin-bottom: 20px;
@@ -35,4 +39,13 @@
 .inactive-room{
   background-color: #CED4DA !important;
   color: black;
+}
+
+.chip{
+  font-weight: 500;
+  background-color: #f1f1f1;
+  border-radius: 15px;
+  text-align: center;
+  padding: 5px;
+  margin-right: 2px;
 }
