Create reservation: Working on passing params

--- a/app/views/cooperate_reservation/_form.html.erb
+++ b/app/views/cooperate_reservation/_form.html.erb
@@ -11,31 +11,67 @@
       </ul>
     </div>
   <% end %>
-  <div class="d-flex justify-content-start">
+<div class="d-flex justify-content-start">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="#">Lễ tân</a></li>
       <li class="breadcrumb-item" aria-current="page"><a href="#">Khách lẻ</a></li>
       <li class="breadcrumb-item active" aria-current="page"><a>Đặt phòng</a></li>
     </ol>
   </div>
-  <div class="bs-stepper">
-    <div class="bs-stepper-content">
-      <%= form_with url: "/reservations", method: :post do |form| %>
+<div class="action">
+  <button id="prev_button" class="btn btn-primary">
+    Back
+  </button>
+  <button id="next_button" class="btn btn-primary" style="float: right">
+    Next
+  </button>
+
+</div>
+<div class="bs-stepper">
+  <div class="bs-stepper-content">
+  <%= form_with url: "/cooperate_reservation/new", method: :post do |form| %>
+    <div id="step1">
       <%= render :partial => "step1",  :locals=>{:form=>form} %>
-      <%#= render :partial => "step2",  :locals=>{:form=>form} %>
-      <%#= render :partial => "step3",  :locals=>{:form=>form} %>
     </div>
-
-    <br>
-    <br>
-
-
-
-  <div class="d-flex actions justify-content-center">
-      <p><%= form.submit "Continue", class:"btn btn-primary"  %></p>
-      <span style="width:10px"></span>
-      <p><%= form.submit "Back", :name => "back_button", class:"btn btn-secondary" unless @reservation.first_step? %></p>
+    <div id="step2">
+      <%= render :partial => "step2",  :locals=>{:form=>form} %>
+    </div>
+    <div id="step3">
+      <%= render :partial => "step3",  :locals=>{:form=>form} %>
     </div>
   </div>
-
+  <br>
+  <br>
+  <%= form.submit "Finish", class:"btn btn-primary", id:"finish_button"  %>
+</div>
 <% end %>
+
+<script>
+    var current_step;
+    $(document).ready(function(){
+        current_step = 1
+        $("#step2").hide()
+        $("#step3").hide()
+        $('#finish_button').hide()
+    })
+    $("#next_button").click(function(){
+        if (current_step >= 3)
+        {
+            current_step = 0;
+            $('#finish_button').click()
+            return;
+        }
+        $("#step" + current_step).hide()
+        current_step++;
+        $("#step" + current_step).show()
+        console.log(current_step)
+
+    })
+    $("#prev_button").click(function() {
+        if (current_step <= 1)
+            return;
+        $("#step" + current_step).hide()
+        current_step--;
+        $("#step" + current_step).show()
+    })
+</script>
