--- a/app/views/room_diagram/_quick_reserve_room.html.erb
+++ b/app/views/room_diagram/_quick_reserve_room.html.erb
@@ -153,15 +153,16 @@
         <p class="col-lg-3">Tổng tiền</p>
         <div class="col-lg-7 form-group">
           <%= p.number_field :temp_total, min: 0, class:"form-control"%>
-          <% end %>
         </div>
       </div>
     </div>
   </div>
-  <%= form.fields_for :client_attributes, Client.new do |customer| %>
+  <%= p.fields_for :client_attributes, Client.new do |customer| %>
     <%= customer.hidden_field(:name, :value => Client.find(1).name) %>
     <%= customer.hidden_field(:citizen_id, :value => Client.find(1).citizen_id) %>
   <% end %>
+<% end %>
+
   <%= form.hidden_field(:check_in_date, :value => Date.today) %>
   <%= form.hidden_field(:employee_id, :value => current_user.employee_id) %>
   <%= form.hidden_field(:room_id, :value => params[:room_id]) %>
